chore: add docker compose for prod & dev

--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "tsx src/index.ts",
+    "build": "tsc",
+    "start": "node dist/src/index.js",
     "dev": "tsx --watch src/index.ts",
-    "db:deploy": "npx prisma migrate deploy && npx prisma generate"
+    "db:deploy": "npx prisma migrate deploy && npx prisma generate",
+    "docker-dev:up": "docker compose -f docker-compose.yml -f docker-compose.dev.yml up -d",
+    "docker-dev:down": "docker compose -f docker-compose.yml -f docker-compose.dev.yml down",
+    "docker-prod:up": "docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d --build",
+    "docker-prod:down": "docker compose -f docker-compose.yml -f docker-compose.prod.yml down",
+    "docker-prod:logs": "docker compose -f docker-compose.yml -f docker-compose.prod.yml logs -f"
   },
   "keywords": [],
   "author": "",
