--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,4 +1,19 @@
 services:
+  postgres:
+    image: postgres
+    container_name: postgres_container_prod
+    restart: always
+    volumes:
+      - ./docker/prod/postgres:/var/lib/postgresql/18/docker
+    env_file:
+      - .env.prod
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d postgres"]
+      interval: 5s
+      timeout: 2s
+      retries: 20
+
+
   app:
     build: .
     container_name: express_app
