--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "docker-prod:up": "docker compose -f docker-compose.prod.yml up -d --build",
     "docker-prod:down": "docker compose -f docker-compose.prod.yml down",
     "docker-prod:logs": "docker compose -f docker-compose.prod.yml logs -f",
+    "format": "npx prettier --write .",
+    "format:check": "npx prettier --check .",
     "prepare": "husky"
   },
   "keywords": [],
