--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/pg": "^8.16.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
+    "pino-pretty": "^13.1.3",
     "prettier": "^3.7.4",
     "prisma": "^7.2.0",
     "tsx": "^4.21.0",
@@ -44,6 +45,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "pg": "^8.16.3",
+    "pino": "^10.1.1",
+    "pino-http": "^11.0.0",
     "reflect-metadata": "^0.2.2"
   },
   "lint-staged": {
