--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-prisma",
+  "name": "custom-be",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -26,26 +26,26 @@
     "@commitlint/config-conventional": "^20.3.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
-    "@types/node": "^25.0.5",
+    "@types/node": "^25.0.10",
     "@types/pg": "^8.16.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "pino-pretty": "^13.1.3",
-    "prettier": "^3.7.4",
-    "prisma": "^7.2.0",
+    "prettier": "^3.8.1",
+    "prisma": "^7.3.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@prisma/adapter-pg": "^7.2.0",
-    "@prisma/client": "^7.2.0",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
-    "cors": "^2.8.5",
+    "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "pg": "^8.16.3",
-    "pino": "^10.1.1",
+    "pg": "^8.17.2",
+    "pino": "^10.3.0",
     "pino-http": "^11.0.0",
     "reflect-metadata": "^0.2.2"
   },
