--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.0.10",
     "@types/nodemailer": "^7.0.9",
     "@types/pg": "^8.16.0",
@@ -44,6 +45,7 @@
     "argon2": "^0.44.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
@@ -53,7 +55,8 @@
     "pg": "^8.17.2",
     "pino": "^10.3.0",
     "pino-http": "^11.0.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "stream": "^0.0.3"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
