--- a/package.json
+++ b/package.json
@@ -47,10 +47,13 @@
     "class-validator": "^0.14.3",
     "cloudinary": "^2.9.0",
     "cors": "^2.8.6",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "handlebars": "^4.7.8",
+    "json-stable-stringify": "^1.3.0",
     "jsonwebtoken": "^9.0.3",
+    "nanoid": "^5.1.6",
     "nodemailer": "^7.0.13",
     "pg": "^8.17.2",
     "pino": "^10.3.0",
