--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@commitlint/config-conventional": "^20.3.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^25.0.10",
+    "@types/nodemailer": "^7.0.9",
     "@types/pg": "^8.16.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
@@ -39,15 +42,24 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
+    "argon2": "^0.44.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.6",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "handlebars": "^4.7.8",
+    "json-stable-stringify": "^1.3.0",
+    "jsonwebtoken": "^9.0.3",
+    "nanoid": "^5.1.6",
+    "nodemailer": "^7.0.13",
     "pg": "^8.17.2",
     "pino": "^10.3.0",
     "pino-http": "^11.0.0",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "stream": "^0.0.3"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
