--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "file-type": "^21.3.0",
     "handlebars": "^4.7.8",
     "json-stable-stringify": "^1.3.0",
     "jsonwebtoken": "^9.0.3",
+    "multer": "^2.0.2",
     "nanoid": "^5.1.6",
     "nodemailer": "^7.0.13",
     "pg": "^8.17.2",
