--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "activityBar.background": "#4C1455",
     "titleBar.activeBackground": "#6B1C77",
     "titleBar.activeForeground": "#FEFCFE"
-  }
+  },
+  "prisma.pinToPrisma6": false
 }
