--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pino-pretty": "^13.1.3",
     "prettier": "^3.8.1",
     "prisma": "^7.3.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
@@ -65,5 +66,8 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
