--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "express": "^5.2.1",
     "file-type": "^21.3.0",
     "handlebars": "^4.7.8",
+    "hono": "^4.11.10",
     "json-stable-stringify": "^1.3.0",
     "jsonwebtoken": "^9.0.3",
+    "midtrans-client": "^1.4.3",
     "multer": "^2.0.2",
     "nanoid": "^5.1.6",
     "nodemailer": "^7.0.13",
