--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pino-pretty": "^13.1.3",
     "prettier": "^3.8.1",
     "prisma": "^7.3.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
@@ -52,8 +53,10 @@
     "express": "^5.2.1",
     "file-type": "^21.3.0",
     "handlebars": "^4.7.8",
+    "hono": "^4.11.10",
     "json-stable-stringify": "^1.3.0",
     "jsonwebtoken": "^9.0.3",
+    "midtrans-client": "^1.4.3",
     "multer": "^2.0.2",
     "nanoid": "^5.1.6",
     "nodemailer": "^7.0.13",
@@ -65,5 +68,8 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
