--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,17 @@
 {
-  "workbench.colorCustomizations": {
-    "activityBar.background": "#033333",
-    "titleBar.activeBackground": "#054848",
-    "titleBar.activeForeground": "#E9FEFE",
-    "titleBar.inactiveBackground": "#033333",
-    "titleBar.inactiveForeground": "#E9FEFE",
-    "statusBar.background": "#033333",
-    "statusBar.foreground": "#E9FEFE",
-    "statusBar.debuggingBackground": "#033333",
-    "statusBar.debuggingForeground": "#E9FEFE",
-    "statusBar.noFolderBackground": "#033333",
-    "statusBar.noFolderForeground": "#E9FEFE"
-  },
   "prisma.pinToPrisma6": false,
-  "windowColors.baseColor": "#0a9e9e"
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#4D4D0F",
+    "titleBar.activeBackground": "#6C6C15",
+    "titleBar.activeForeground": "#FBFBEA",
+    "titleBar.inactiveBackground": "#4D4D0F",
+    "titleBar.inactiveForeground": "#FBFBEA",
+    "statusBar.background": "#4D4D0F",
+    "statusBar.foreground": "#FBFBEA",
+    "statusBar.debuggingBackground": "#4D4D0F",
+    "statusBar.debuggingForeground": "#FBFBEA",
+    "statusBar.noFolderBackground": "#4D4D0F",
+    "statusBar.noFolderForeground": "#FBFBEA"
+  },
+  "windowColors.baseColor": "#6b6b15"
 }
