--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,17 @@
 {
+  "prisma.pinToPrisma6": false,
   "workbench.colorCustomizations": {
-    "activityBar.background": "#4C1455",
-    "titleBar.activeBackground": "#6B1C77",
-    "titleBar.activeForeground": "#FEFCFE"
+    "activityBar.background": "#4D4D0F",
+    "titleBar.activeBackground": "#6C6C15",
+    "titleBar.activeForeground": "#FBFBEA",
+    "titleBar.inactiveBackground": "#4D4D0F",
+    "titleBar.inactiveForeground": "#FBFBEA",
+    "statusBar.background": "#4D4D0F",
+    "statusBar.foreground": "#FBFBEA",
+    "statusBar.debuggingBackground": "#4D4D0F",
+    "statusBar.debuggingForeground": "#FBFBEA",
+    "statusBar.noFolderBackground": "#4D4D0F",
+    "statusBar.noFolderForeground": "#FBFBEA"
   },
-  "prisma.pinToPrisma6": false
+  "windowColors.baseColor": "#6b6b15"
 }
