--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,16 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.background": "#4C1455",
-    "titleBar.activeBackground": "#6B1C77",
-    "titleBar.activeForeground": "#FEFCFE",
-    "titleBar.inactiveBackground": "#4C1455",
-    "titleBar.inactiveForeground": "#FEFCFE",
-    "statusBar.background": "#4C1455",
-    "statusBar.foreground": "#FEFCFE",
-    "statusBar.debuggingBackground": "#4C1455",
-    "statusBar.debuggingForeground": "#FEFCFE",
-    "statusBar.noFolderBackground": "#4C1455",
-    "statusBar.noFolderForeground": "#FEFCFE"
+    "activityBar.background": "#4D4D0F",
+    "titleBar.activeBackground": "#6C6C15",
+    "titleBar.activeForeground": "#FBFBEA",
+    "titleBar.inactiveBackground": "#4D4D0F",
+    "titleBar.inactiveForeground": "#FBFBEA",
+    "statusBar.background": "#4D4D0F",
+    "statusBar.foreground": "#FBFBEA",
+    "statusBar.debuggingBackground": "#4D4D0F",
+    "statusBar.debuggingForeground": "#FBFBEA",
+    "statusBar.noFolderBackground": "#4D4D0F",
+    "statusBar.noFolderForeground": "#FBFBEA"
   },
   "prisma.pinToPrisma6": false
 }
